corrected z-index of map

--- a/src/css/components/map.css
+++ b/src/css/components/map.css
@@ -13,7 +13,6 @@
   & iframe {
     height: 35vh;
     width: 100vw;
-    z-index: 1;
     border: none;
 
     @media (min-width: 992px) {
